# arrow

./: .bazelignore  .bazelrc  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  pnpm-lock.yaml
bazel/: BUILD  azure.BUILD  deps.bzl  deps1.bzl  deps2.bzl  snappy.BUILD  thrift.BUILD  version.bzl  wil.BUILD  xsimd.BUILD
cpp/examples/arrow/: BUILD
cpp/examples/minimal_build/: BUILD  example.cc
cpp/examples/parquet/low_level_api/: BUILD  encryption_reader_writer_all_crypto_options.cc
cpp/examples/parquet/parquet_arrow/: BUILD
cpp/examples/parquet/parquet_stream_api/: BUILD
cpp/examples/tutorial_examples/: BUILD  dataset_example.cc
cpp/src/arrow/: BUILD  BUILD.bazel  base.cc
cpp/src/arrow/acero/: BUILD
cpp/src/arrow/c/: BUILD
cpp/src/arrow/compute/kernels/: aggregate_var_std.cc  aggregate_var_std_internal.h  hash_aggregate.cc
cpp/src/arrow/csv/: BUILD
cpp/src/arrow/dataset/: BUILD  dataset_writer_test.cc
cpp/src/arrow/extension/: BUILD
cpp/src/arrow/filesystem/: BUILD  api.h  azurefs_test.cc
cpp/src/arrow/integration/: BUILD
cpp/src/arrow/io/: api.h
cpp/src/arrow/ipc/: BUILD
cpp/src/arrow/json/: BUILD
cpp/src/arrow/tensor/: BUILD
cpp/src/arrow/testing/: BUILD
cpp/src/arrow/util/: BUILD.disabled  basic_decimal.cc  bitmap_writer.h  compression_bz2.cc  config.h  decimal_test.cc  int128_internal.h  io_util_test.cc  util_base.cc  util_config.cc
cpp/src/parquet/: BUILD
cpp/src/parquet/api/: BUILD
cpp/src/parquet/arrow/: BUILD
cpp/submodules/: BUILD
cpp/tools/parquet/: BUILD
