module(name="arrow", version="0.0.1")

use_repo(
    use_extension("//bazel:deps1.bzl", "deps1"),
    "com_github_google_flatbuffers",
    "com_github_apache_thrift",
    "com_github_nelhage_rules_boost",
    "com_github_xtensorstack_xsimd",
    "com_github_microsoft_wil",
    "com_github_azure_sdk",
    "snappy"
)

use_repo(
    use_extension("//bazel:deps2.bzl", "deps2"),
    "boost"
)

bazel_dep(name = "rules_cc", version = "0.0.9")

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
# googletest can't be dev dep here, as arrow contains testing code that other modules might use, and it depends on gtest
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.8.3", dev_dependency = True)
bazel_dep(name = "gflags", version = "2.2.2", dev_dependency = True)
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "zlib", version = "1.3")
bazel_dep(name = "boringssl", version = "0.0.0-20240126-22d349c")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "zstd", version = "1.5.5")
bazel_dep(name = "bzip2", version = "1.0.8")
# Used by xsimd
bazel_dep(name = "doctest", version = "2.4.11", dev_dependency = True)
# needed by flatbuffers
bazel_dep(name = "aspect_rules_js", version = "1.37.1")
bazel_dep(name = "aspect_rules_ts", version = "2.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.3.0")
bazel_dep(name = "rules_swift", version = "1.15.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_go", version = "0.45.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "aspect_rules_esbuild", version = "0.18.0")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# bazel_dep(name = "rules_dotnet", version = "0.14.0")

# dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
# dotnet.toolchain(dotnet_version = "8.0.100")
# use_repo(dotnet, "dotnet_toolchains")

# register_toolchains("@dotnet_toolchains//:all")

# # example_deps_extension = use_extension("@rules_dotnet//:paket.example_deps_extension.bzl", "example_deps_extension")
# # use_repo(example_deps_extension, "paket.example_deps")

# main_extension = use_extension("@rules_dotnet//paket/deps:paket.main_extension.bzl", "main_extension")
# use_repo(main_extension, "paket.main")

# othergroup_extension = use_extension("@rules_dotnet//paket/deps:paket.othergroup_extension.bzl", "othergroup_extension")
# use_repo(othergroup_extension, "paket.othergroup")
