module(name="arrow", version="0.0.1")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_cc", version = "0.0.9")

# googletest can't be dev dep here, as arrow contains testing code that other modules might use, and it depends on gtest
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "google_benchmark", version = "1.8.3", dev_dependency = True)
bazel_dep(name = "gflags", version = "2.2.2", dev_dependency = True)

bazel_dep(name = "boringssl", version = "0.0.0-20240126-22d349c")
bazel_dep(name = "bzip2", version = "1.0.8")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "rapidjson", version = "1.1.0")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "zstd", version = "1.5.5.bcr.1")

# --//:with_glog=true to use it.
bazel_dep(name = "glog", version = "0.6.0")

# Used by xsimd
bazel_dep(name = "doctest", version = "2.4.11", dev_dependency = True)

# needed by flatbuffers
bazel_dep(name = "aspect_rules_js", version = "1.37.1")
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

use_repo(
    use_extension("//bazel:deps1.bzl", "deps1"),
    "com_github_google_flatbuffers",
    "com_github_nelhage_rules_boost",
    "com_github_xtensorstack_xsimd",
    "com_github_microsoft_wil",
    "com_github_azure_sdk",
    "snappy",
)

use_repo(
    use_extension("//bazel:deps2.bzl", "deps2"),
    "boost",
    "com_github_apache_thrift",
)
