package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "compare",
    srcs = ["compare.cc"],
)

# Strike for ergonomics
cc_library(
    name = "status",
    srcs = ["status.cc"],
    hdrs = ["status.h"],
    include_prefix = "arrow",
    deps = ["//cpp/src/arrow/util:logging"],
)

cc_library(
    name = "status_test",
    srcs = ["status_test.cc"],
    deps = [
        "status",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "result",
    srcs = ["result.cc"],
    hdrs = ["result.h"],
    #strip_include_prefix = "arrow",
    include_prefix = "arrow",
    deps = [":status"],
)
